# home-assistant-thermostat-setback

./: README.md  example_configuration.yaml  hacs.json  pyproject.toml  requirements_dev.txt
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: publish.yml
config/: configuration.yaml
custom_components/climate_setback/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  sensor.py  services.py  services.yaml  switch.py
custom_components/climate_setback/translations/: en.json
custom_components/thermostat_setback/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  sensor.py  switch.py
custom_components/thermostat_setback/translations/: en.json
scripts/: develop  update_const  update_manifest.py
tests/: __init__.py  test_climate_setback.py
